[package]
name = "rust-server"
version = "0.1.0"
authors = ["Tristan Barlow <tristanbarlowg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.1"
chess = "3.1.1"
rand = "0.8.3"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde_derive = "1.0"
serde = "1.0"
log = "0.4"
pretty_env_logger = "0.3"
